plugins/kotlin/idea/tests/testData/checker/regression/AnnotationOnNamedParameterOfFunctionType.kt
fun <K, V> intercept(<warning>block</warning>: (<error descr="[UNSUPPORTED]">@<error descr="[UNRESOLVED_REFERENCE]">A</error></error> key: K, (K) -> V) -> V) {

}